--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,67 +1,93 @@
-<div id="<%= dom_id request %>">
-  <p>
-    <strong>Requester name:</strong>
-    <%= request.requester_name %>
-  </p>
-
-  <p>
-    <strong>Requester extension:</strong>
-    <%= request.requester_extension %>
-  </p>
-
-  <p>
-    <strong>Requester phone:</strong>
-    <%= request.requester_phone %>
-  </p>
-
-  <p>
-    <strong>Requester:</strong>
-    <%= request.requester_id %>
-  </p>
-
-  <p>
-    <strong>Requester mail:</strong>
-    <%= request.requester_mail %>
-  </p>
-
-  <p>
-    <strong>Requester type:</strong>
-    <%= request.requester_type %>
-  </p>
-
-  <p>
-    <strong>Student:</strong>
-    <%= request.student_id %>
-  </p>
-
-  <p>
-    <strong>Student assosiation:</strong>
-    <%= request.student_assosiation %>
-  </p>
-
-  <p>
-    <strong>Work location:</strong>
-    <%= request.work_location %>
-  </p>
-
-  <p>
-    <strong>Work building:</strong>
-    <%= request.work_building %>
-  </p>
-
-  <p>
-    <strong>Work type:</strong>
-    <%= request.work_type %>
-  </p>
-
-  <p>
-    <strong>Work description:</strong>
-    <%= request.work_description %>
-  </p>
-
-  <p>
-    <strong>Status:</strong>
-    <%= request.status %>
-  </p>
-
+<div class="container mt-3 mb-3 p-4 border border-2 rounded-3">
+  <div class="row">
+    <h3 class="text-center">
+      <% case request.status
+     when "in_process" %> Solicitud en Proceso
+      <% when "completed" %> Solicitud Finalizada
+      <% when "closed" %> Solicitud Cerrada
+      <% when "denied" %> Solicitud Rechazada
+    <% else %> Solicitud Pendiente
+    <% end %>
+  </h3>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <p>
+      <strong>Dirección email del solicitante:</strong>
+      <%= request.requester_mail %>
+    </p>
+    <% if (request.status != "pending" && request.status != "denied") || current_user %>
+      <p>
+        <strong>Nombre del solicitante:</strong>
+        <%= request.requester_name %>
+      </p>
+      <p>
+        <strong>Extensión del solicitante:</strong>
+        <%= request.requester_extension %>
+      </p>
+      <p>
+        <strong>Número telefónico de solicitante:</strong>
+        <%= request.requester_phone %>
+      </p>
+      <p>
+        <strong>Identificación del solicitante:</strong>
+        <%= request.requester_id %>
+      </p>
+      <p>
+        <strong>Tipo de solicitante:</strong>
+        <%= @dictionary.requesterTypes[request.requester_type.to_sym] %>
+      </p>
+      <% if request.requester_type == "student" %>
+        <p>
+          <strong>Carnet del solicitante:</strong>
+          <%= request.student_id %>
+        </p>
+        <p>
+          <strong>Dependencia estudiantil:</strong>
+          <%= @dictionary.studentAssociations[request.student_assosiation.to_sym] %>
+        </p>
+      <% end %>
+      <p>
+        <strong>Edificio:</strong>
+        <% if !@dictionary.workBuildings[request.work_building.to_sym].nil? %>
+          <%= @dictionary.workBuildings[request.work_building.to_sym] %>
+        <% else %>
+          <%= request.work_building %>
+        <% end %></td>
+    </p>
+    <p>
+      <strong>Lugar del trabajo a realizar:</strong>
+      <%= request.work_location %>
+    </p>
+    <p>
+      <strong>Tipo de trabajo a realizar:</strong>
+      <% if !@dictionary.workTypes[request.work_type.to_sym].nil? %>
+        <%= @dictionary.workTypes[request.work_type.to_sym] %>
+      <% else %>
+        <%= request.work_type %>
+      <% end %>
+    </p>
+    <p>
+      <strong>Descripción del trabajo a realizar:</strong>
+      <%= request.work_description %>
+    </p>
+  <% end %>
+</div>
+</div>
+<div class="container">
+</div>
+<% if request.status == "denied" %>
+  <div class="container">
+    <label>Razones de rechazo de solicitud:</label>
+    <div>
+      <ul>
+        <% @reasons.each do |reason| %>
+          <li>
+            <label><%= reason.description %></label>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+<% end %>
 </div>
