--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,17 +1,25 @@
 <div id="<%= dom_id employee %>">
-  <p>
-    <strong>Employee id card:</strong>
-    <%= employee.employee_id_card %>
-  </p>
-
-  <p>
-    <strong>Employee status:</strong>
-    <%= employee.employee_status %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= employee.user_id %>
-  </p>
-
+  <div class="container mt-3 mb-3 p-5 border border-2 rounded-3">
+    <h4 class="text-center">Información del empleado</h4>
+    <br>
+    <div>
+      <p>
+        <strong>Nombre completo:</strong>
+        <%= @account.name %>
+      </p>
+    </div>
+    <div>
+      <p>
+        <strong>Número de cédula:</strong>
+        <%= employee.employee_id_card %>
+    <p>
+      <strong>Email:</strong>
+      <%= @account.email %>
+    </p>
+    <p>
+      <strong>Employee status:</strong>
+      <%= employee.employee_status %>
+    </p>
+  </div>
+</div>
 </div>
