--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New employee</h1>
-
+<h1 class="text-center">Nuevo empleado</h1>
 <%= render "form", employee: @employee %>
-
 <br>
-
 <div>
   <%= link_to "Back to employees", employees_path %>
 </div>
