--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,7 +23,7 @@
                   Empleados
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <%= link_to "Agregar", "#", class: "dropdown-item" %>
+                  <%= link_to "Agregar", new_employee_path, class: "dropdown-item" %>
                   <%= link_to "Listar", "#", class: "dropdown-item" %>
                 </div>
               </li>
