Se agrega la creación de empleados

--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -5,7 +5,7 @@
     <div>
       <p>
         <strong>Nombre completo:</strong>
-        <%= @account.name %>
+        <%= employee.user_account.name %>
       </p>
     </div>
     <div>
@@ -14,7 +14,7 @@
         <%= employee.employee_id_card %>
     <p>
       <strong>Email:</strong>
-      <%= @account.email %>
+      <%= employee.user_account.email %>
     </p>
     <p>
       <strong>Employee status:</strong>
