--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -11,17 +11,16 @@
   <% end %>
   <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
     <h4 class="text-center">Información del empleado</h4>
-    <div>
-      <p>
-        <%= form.label "Nombre completo", style: "display: block" %>
-        <%= form.text_field :employee_name, class: "form-control" %>
-      </p>
-    </div>
-    <div>
-      <p>
-        <%= form.label "Email", style: "display: block" %>
-        <%= form.text_field :employee_mail, class: "form-control" %>
-      </p>
+    <%= form.fields_for :user_accounts do |account|%>
+      <div class="form-group">
+        <%= account.label "Nombre completo" %>
+        <%= account.text_field :name, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= account.label :email %>
+        <%= account.text_field :email, class: "form-control" %>
+      </div>
+    <%end%>
     <div>
       <p>
         <%= form.label "Número de cédula", style: "display: block" %>
@@ -34,12 +33,12 @@
       </p>
       <div class="container mb-3">
         <div class="form-check">
-          <%= form.label :employee_status, "Activo", :value => 1 %>
-          <%= form.radio_button :employee_status, 1, class:"form-check-input", type:"radio" %>
+          <%= form.label :employee_status, "Activo", :value => "Activo" %>
+          <%= form.radio_button :employee_status, "Activo", class:"form-check-input", type:"radio" %>
         </div>
         <div class="form-check">
-          <%= form.label :employee_status, "Inactivo", :value => 0 %>
-          <%= form.radio_button :employee_status, 0, class:"form-check-input", type:"radio", :checked => true %>
+          <%= form.label :employee_status, "Inactivo", :value => "Inactivo" %>
+          <%= form.radio_button :employee_status, "Inactivo", class:"form-check-input", type:"radio", :checked => true %>
         </div>
       </div>
     </div>
