Se agrega modulo completo de CRUD de los empleados

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,7 +24,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <%= link_to "Agregar", new_employee_path, class: "dropdown-item" %>
-                  <%= link_to "Listar", "#", class: "dropdown-item" %>
+                  <%= link_to "Listar", employees_path, class: "dropdown-item" %>
                 </div>
               </li>
             <% end %>
