--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,41 @@
-<h1>Editing task</h1>
-
-<%= render "form", task: @task %>
-
-<br>
-
-<div>
-  <%= link_to "Show this task", @task %> |
-  <%= link_to "Back to tasks", tasks_path %>
+<div class="container mt-3 mb-3 p-3">
+  <div class="row">
+    <h1 class="text-center"><%= (current_user_account.role == "admin") ? "Modificar asigaciones" : "Trabajo asignado" %></h1>
+  </div>
+  <div class="row">
+    <h2 class="text-center">Solicitud <%= @request.id %></h2>
+  </div>
+  <% if current_user_account.role == "employee" %>
+    <div class="row">
+      <%= render "/tasks/employee_views/employee_view" %>
+    </div>
+  <% else %>
+    <% if @request.status != "completed" && @request.status != "closed" %>
+      <div id="add-employees" class="container">
+        <h6>Asignar trabajadores:</h6>
+        <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "add" %>
+      </div>
+      <br>
+    <% end %>
+    <div id="remove-employees" class="container">
+      <% if @request.status != "completed" && @request.status != "closed" %>
+        <h6>Remover trabajadores:</h6>
+      <% else %>
+        <h6>Trabajadores asignados:</h6>
+      <% end %>
+      <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "remove" %>
+    </div>
+  <% end %>
+  <br>
+  <% if @request.status == "completed" %>
+    <%= link_to "Cerrar solicitud", change_status_request_path(@request, :action => "close"), class: "btn btn-primary" %>
+    <br>
+    <br>
+    <%= link_to "Reabrir solicitud", change_status_request_path(@request, :action => "open"), class: "btn btn-primary" %>
+    <br>
+    <br>
+  <% end %>
+  <div>
+    <%= link_to "Volver a la lista de solicitudes", requests_path, class: "btn btn-primary" %>
+  </div>
 </div>
