Se finaliza el módulo de rechazo de requests

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -83,7 +83,7 @@
       <ul>
         <% @reasons.each do |reason| %>
           <li>
-            <label><%= reason.description %></label>
+            <label><%= reason.reason %></label>
           </li>
         <% end %>
       </ul>
