--- a/app/views/requests/admin_views/_deny_request.html.erb
+++ b/app/views/requests/admin_views/_deny_request.html.erb
@@ -1,22 +1,32 @@
-<%= form_with(model: request, local: true) do |f| %>
-    <div data-controller="nested-form">
-        <h4>Razones para rechazar:</h4>
-
-        <template data-nested-form-target="template"> 
-            <%= f.fields_for :deny_reasons, DenyReason.new, child_index: "TEMPLATE_RECORD" do |reason| %>
-                <%= render "requests/admin_views/deny_reason_fields", f: reason, request: request %>
-            <% end %>
-        </template>
-        
-        <%= f.fields_for :deny_reasons do |reason| %>
-                <%= render "requests/admin_views/deny_reason_fields", f: reason, request: request %>
-        <% end %>
-
-        <div data-nested-form-target="add_item">
-            <%= link_to "Agregar razón", "#", data: { action: "nested-form#add_association" } %>
+<%= form_with(model: request, local: true ,data: { turbo_method: :delete, turbo_confirm: "¿Rechazar esta solicitud?" }) do |f| %>
+  <div data-controller="nested-form">
+    <h4>Razones para rechazar:</h4>
+    <div>
+      <template data-nested-form-target="template">
+        <%= f.fields_for :request_deny_reasons, RequestDenyReason.new, child_index: "TEMPLATE_RECORD" do |reason| %>
+          <div class="container m-3">
+            <%= render "requests/admin_views/deny_reason_fields", f: reason, request: request %>
+          <% end %>
         </div>
+      </template>
     </div>
-
-    <%= f.submit "Rechazar solicitud" %>
-
+    <div class="container m-3">
+      <%= f.fields_for :request_deny_reasons do |reason| %>
+        <div class="container m-3">
+          <%= render "requests/admin_views/deny_reason_fields", f: reason, request: request %>
+        </div>
+      <% end %>
+    </div>
+    <div class="container m-3">
+      <div data-nested-form-target="add_item">
+        <%= link_to "#", data: { action: "nested-form#add_association" }, class:"btn btn-sm btn-primary" do %>
+          <i class="bi bi-plus"></i>
+          Agregar razón
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <%= button_tag(class: "btn btn-primary") do %>
+    Rechazar solicitud
+  <% end %>
 <% end %>
