--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,9 +1,13 @@
-<h1>Editing request</h1>
-
-<%= render "form", request: @request %>
-
-<br>
-
+<div class="container mt-3 mb-3 p-4">
+  <h3>Rechazar Solicitud:</h3>
+  <h5>Número de solicitud: <%= @request.id %></h4>
+</div>
+<div>
+  <%= render @request %>
+</div>
+<div class="container mt-3 mb-3 p-4 border border-2 rounded-3">
+  <%= render "requests/admin_views/deny_request", request: @request %>
+</div>
 <div>
   <%= link_to "Show this request", @request %> |
   <%= link_to "Back to requests", requests_path %>
