--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -28,10 +28,10 @@
   <% end %>
   <br>
   <% if @request.status == "completed" %>
-    <%= link_to "Cerrar solicitud", change_status_request_path(@request, :action => "close"), class: "btn btn-primary" %>
+    <%= link_to "Cerrar solicitud", change_status_request_path(@request, :change_to => "close"), class: "btn btn-primary" %>
     <br>
     <br>
-    <%= link_to "Reabrir solicitud", change_status_request_path(@request, :action => "open"), class: "btn btn-primary" %>
+    <%= link_to "Reabrir solicitud", change_status_request_path(@request, :change_to => "open"), class: "btn btn-primary" %>
     <br>
     <br>
   <% end %>
