--- a/app/views/employees/_employee_filter.html.erb
+++ b/app/views/employees/_employee_filter.html.erb
@@ -1,23 +1,10 @@
-<div class="container" data-controller="table-filter" data-table-filter-url="<%= status_filter_path %>">
+<div class="container">
   <h6>Mostrar por:</h6>
-  <div class="form-group" id="filters">
-    <div class="row">
-      <div class="col">
-        <input name="status" value="both" type="checkbox" data-action="table-filter#change" class="form-check-input" checked>
-        <label class="form-check-label" for="flexCheckDefault">Todos</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <input name="status" value="active" type="checkbox" data-action="table-filter#change" class="form-check-input">
-        <label class="form-check-label" for="flexCheckDefault">Activos</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <input name="status" value="inactive" type="checkbox" data-action="table-filter#change" class="form-check-input">
-        <label class="form-check-label" for="flexCheckDefault">Inactivos</label>
-      </div>
+  <div data-controller="table-filter" data-table-filter-url="<%= status_filter_path %>">
+    <div class="form-group" id="filters">
+      <input name="status" value="both" type="checkbox" data-action="table-filter#change" class="form-check-input" checked/>Todos
+      <input name="status" value="active" type="checkbox" data-action="table-filter#change" class="form-check-input"/>Activos
+      <input name="status" value="inactive" type="checkbox" data-action="table-filter#change" class="form-check-input"/>Inactivos
     </div>
   </div>
 </div>
