--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <%= link_to "#", class:"btn btn-primary" do %>
+            <%= link_to ask_state_path, class:"btn btn-primary" do %>
               <i class="bi bi-search"></i>
               Ver el estado de una solicitud
             <% end %>
