--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -90,4 +90,7 @@
     </div>
   </div>
 <% end %>
+<% if request.status == "closed" && request.feedbacks.nil? %>
+    <%= link_to "Enviar feedback", new_feedback_path(request_id: request), class: "btn btn-primary" %>
+<% end %>
 </div>
