--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,28 +30,24 @@
             <% end %>
           </li>
         <% end %>
-        <% if current_user_account %>
-          <li class="nav-item ms-3">
-            <%= link_to edit_user_account_registration_path, class:"btn btn-sm btn-primary" do %>
-              <i class="bi bi-person"></i>
-              Administrar cuenta
-            <% end %>
-          </li>
-          <li class="nav-item ms-3 me-3 position-absolute end-0">
-            <%= button_to destroy_user_account_session_path, class:"btn btn-sm btn-primary", method: :delete do %>
-              <i class="bi bi-box-arrow-left"></i>
-              Cerrar sesión
-            <% end %>
-          </li>
-        <% else %>
-          <li class="nav-item ms-3 me-3 position-absolute end-0">
-            <%= link_to new_user_account_session_path, class:"btn btn-sm btn-primary" do %>
-              <i class="bi bi-box-arrow-in-right"></i>
-              Iniciar sesión
-            <% end %>
-          </li>
-        <% end %>
       </ul>
+      <% if current_user_account %>
+        <div class= "btn-group">
+          <%= link_to edit_user_account_registration_path, class:"btn btn-sm btn-secondary" do %>
+            <i class="bi bi-person"></i>
+            Administrar cuenta
+          <% end %>
+          <%= button_to destroy_user_account_session_path, class:"btn btn-sm btn-primary", method: :delete do %>
+            <i class="bi bi-box-arrow-left"></i>
+            Cerrar sesión
+          <% end %>
+        </div>
+      <% else %>
+        <%= link_to new_user_account_session_path, class:"btn btn-sm btn-primary" do %>
+          <i class="bi bi-box-arrow-in-right"></i>
+          Iniciar sesión
+        <% end %>
+      <% end %>
     </div>
   </div>
 </nav>
