--- a/app/views/log_entries/index.html.erb
+++ b/app/views/log_entries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3 mb-3 p-4 border border-2 rounded-3">
+<div class="container mt-3 mb-3 p-4">
   <div class="row">
     <div class="col-12 text-center">
       <h1>Historial de cambios hechos sobre la solicitud</h1>
@@ -10,10 +10,17 @@
         <% @log_entries.each do |entry| %>
           <div class="row">
             <div class="col-12">
-              <p> <strong><%= entry.created_at.strftime("%Y-%m-%d")%></strong> - <%= entry.user_account.name%>: <%= entry.entry_message %> </p>
+              <p> <strong><%= entry.created_at.to_s(:db) %></strong> - <%= entry.user_account.name%>: <%= entry.entry_message %> </p>
             </div>
           </div>
         <% end %>
       </div>
     </div>
+    <div class="d-flex justify-content-center">
+      <%= link_to :back, class: "btn btn-primary" do %>
+        <i class="bi bi-arrow-bar-left"></i>
+        Volver
+      <% end %>
+    </div>
+  </div>
 </div>
