--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,18 +2,26 @@
 <div class="container mt-3 mb-3 ">
   <div class="position-relative mt-3">
     <% if !current_user_account %>
-    <div class="position-absolute end-50">
+      <div class="position-absolute end-50">
         <%= link_to root_path, class: "btn btn-primary" do %>
           <i class="bi bi-arrow-bar-left"></i>
           Volver
         <% end %>
       </div>
     <% else %>
-      <div class="position-absolute end-50">
-        <%= link_to requests_path, class: "btn btn-primary" do %>
-          <i class="bi bi-arrow-bar-left"></i>
-          Volver
-        <% end %>
+      <div class="d-flex justify-content-center">
+        <div class="btn-group">
+          <%= link_to requests_path, class: "btn btn-primary" do %>
+            <i class="bi bi-arrow-bar-left"></i>
+            Volver
+          <% end %>
+          <% if current_user_account.role == "admin" %>
+            <%= link_to log_entries_path(:request_id => @request.id), class: "btn btn-primary" do %>
+              <i class="bi bi-clipboard2"></i>
+              Ver historial de cambios
+            <% end %>
+          <% end %>
+        </div>
       </div>
     <% end %>
   </div>
