--- a/app/views/requests/admin_views/_deny_reason_fields.html.erb
+++ b/app/views/requests/admin_views/_deny_reason_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
   <div class="row">
     <%= f.hidden_field :_destroy %>
-    <% f.hidden_field :user_id, value: "1" %>
+    <% f.hidden_field :user_id, value: current_user_account.id %>
     <% f.hidden_field :request_id, value: request.id %>
   </div>
   <div class="row">
