Se agregan cambios preparatiorios para el hosteo de la app en Heroku

--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -10,17 +10,17 @@
     </div>
   <% end %>
   <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-    <div>
-      <%= form.label :observations, style: "display: block" %>
+    <div class="mb-3">
+      <%= form.label "Comentarios y observaciones", style: "display: block" %>
       <%= form.text_area :observations, class:"form-control" %>
     </div>
     <div class="d-none">
       <%= form.label :request_id, style: "display: block" %>
       <%= form.hidden_field :request_id, value: @request.id , class:"form-control" %>
     </div>
-    <div class="row">
-      <%= form.label :satisfaction, style: "display: block" %>
-      <div>
+    <div class="containter">
+      <%= form.label "Nivel de satisfacción", style: "display: block" %>
+      <div class="row mt-1">
         <div class="col">
           <%= form.radio_button :satisfaction, 1, :name => "satisfaction"%>
           <label>1</label>
@@ -47,8 +47,8 @@
           <span>Muy positiva</span>
         </div>
       </div>
-      <div>
-        <%= form.submit %>
+      <div class="d-flex justify-content-center mt-5">
+        <%= form.submit "Devolver feedback", class:"btn btn-sm btn-primary" %>
       </div>
     </div>
 <% end %>
