--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -106,9 +106,7 @@
       </p>
     </div>
   </div>
-  <div class="position-relative mt-3">
-    <div class="position-absolute start-50">
+  <div class="d-flex justify-content-center">
       <%= form.submit "Crear solicitud", class:"btn btn-sm btn-primary" %>
-    </div>
   </div>
 <% end %>
