--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,11 +2,19 @@
 <div class="container mt-3 mb-3 ">
   <div class="position-relative mt-3">
     <% if !current_user_account %>
-      <div class="position-absolute end-50">
-        <%= link_to root_path, class: "btn btn-primary" do %>
-          <i class="bi bi-arrow-bar-left"></i>
-          Volver
-        <% end %>
+      <div class="d-flex justify-content-center">
+        <div class="btn-group">
+          <%= link_to root_path, class: "btn btn-primary" do %>
+            <i class="bi bi-arrow-bar-left"></i>
+            Volver
+          <% end %>
+          <% if @request.feedback.nil? && @request.status == "closed"%>
+            <%= link_to new_feedback_path(:request_id => @request.id), class: "btn btn-primary" do %>
+              <i class="bi bi-clipboard2"></i>
+              Agregar feedback
+            <% end %>
+          <% end %>
+        </div>
       </div>
     <% else %>
       <div class="d-flex justify-content-center">
