--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,8 +1,5 @@
 <%= render @employee %>
 
 <div>
-  <%= link_to "Edit this employee", edit_employee_path(@employee) %> |
-  <%= link_to "Back to employees", employees_path %>
-
-  <%= button_to "Destroy this employee", @employee, method: :delete %>
+  <%= link_to "Volver a la lista de empleados", employees_path %>
 </div>
