--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -12,43 +12,44 @@
   <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
     <div class="mb-3">
       <%= form.label "Comentarios y observaciones", style: "display: block" %>
-      <%= form.text_area :observations, class:"form-control" %>
+      <%= form.text_area :observations, class: "form-control" %>
     </div>
     <div class="d-none">
       <%= form.label :request_id, style: "display: block" %>
-      <%= form.hidden_field :request_id, value: @request.id , class:"form-control" %>
+      <%= form.hidden_field :request_id, value: @request.id, class: "form-control" %>
     </div>
     <div class="containter">
       <%= form.label "Nivel de satisfacción", style: "display: block" %>
       <div class="row mt-1">
         <div class="col">
-          <%= form.radio_button :satisfaction, 1, :name => "satisfaction"%>
+          <%= form.radio_button :satisfaction, 1, :name => "satisfaction" %>
           <label>1</label>
           <span>Muy negativa</span>
         </div>
         <div class="col">
-          <%= form.radio_button :satisfaction, 2, :name => "satisfaction"%>
+          <%= form.radio_button :satisfaction, 2, :name => "satisfaction" %>
           <label>2</label>
           <span>Negativa</span>
         </div>
         <div class="col">
-          <%= form.radio_button :satisfaction, 3, :name => "satisfaction"%>
+          <%= form.radio_button :satisfaction, 3, :name => "satisfaction" %>
           <label>3</label>
           <span>Neutral</span>
         </div>
         <div class="col">
-          <%= form.radio_button :satisfaction, 4, :name => "satisfaction"%>
+          <%= form.radio_button :satisfaction, 4, :name => "satisfaction" %>
           <label>4</label>
           <span>Positiva</span>
         </div>
         <div class="col">
-          <%= form.radio_button :satisfaction, 5, :name => "satisfaction"%>
+          <%= form.radio_button :satisfaction, 5, :name => "satisfaction" %>
           <label>5</label>
           <span>Muy positiva</span>
         </div>
       </div>
       <div class="d-flex justify-content-center mt-5">
-        <%= form.submit "Devolver feedback", class:"btn btn-sm btn-primary" %>
+        <%= form.submit "Devolver feedback", class: "btn btn-sm btn-primary" %>
       </div>
     </div>
+  </div>
 <% end %>
