--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -44,7 +44,7 @@
           </p>
           <p>
             <strong>Dependencia estudiantil:</strong>
-            <%= @dictionary.studentAssociations[request.student_assosiation.to_sym] %>
+            <%= @dictionary.studentAssociations[request.student_association.to_sym] %>
           </p>
         <% end %>
         <p>
