--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -11,16 +11,16 @@
   <% end %>
   <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
     <h4 class="text-center">Información del empleado</h4>
-    <%= form.fields_for :user_accounts do |account|%>
-      <div class="form-group">
+    <%= form.fields_for :user_account do |account| %>
+      <div class="form-group mb-3">
         <%= account.label "Nombre completo" %>
         <%= account.text_field :name, class: "form-control" %>
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <%= account.label :email %>
         <%= account.text_field :email, class: "form-control" %>
       </div>
-    <%end%>
+    <% end %>
     <div>
       <p>
         <%= form.label "Número de cédula", style: "display: block" %>
@@ -34,11 +34,11 @@
       <div class="container mb-3">
         <div class="form-check">
           <%= form.label :employee_status, "Activo", :value => "Activo" %>
-          <%= form.radio_button :employee_status, "Activo", class:"form-check-input", type:"radio" %>
+          <%= form.radio_button :employee_status, "Activo", class: "form-check-input", type: "radio" %>
         </div>
         <div class="form-check">
           <%= form.label :employee_status, "Inactivo", :value => "Inactivo" %>
-          <%= form.radio_button :employee_status, "Inactivo", class:"form-check-input", type:"radio", :checked => true %>
+          <%= form.radio_button :employee_status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <%= form.number_field :user_id %>
     </div>
     <div>
-      <%= form.submit "Añadir nuevo empleado", class:"btn btn-primary" %>
+      <%= form.submit "Añadir nuevo empleado", class: "btn btn-primary" %>
     </div>
-  <% end %>
+<% end %>
 </div>
